@@ -10,8 +10,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <zookeeper.version>3.4.6</zookeeper.version>
-        <hadoop.version>2.7.3</hadoop.version>
-        <hadoop3.version>3.1.3</hadoop3.version>
+        <hadoop2.version>2.7.3</hadoop2.version>
+        <hadoop3.version>3.0.0</hadoop3.version>
         <spring.version>5.2.3.RELEASE</spring.version>
         <fastjson>2.9.6</fastjson>
     </properties>
@@ -40,32 +40,6 @@
                 <version>2.1.1</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.apache.hadoop</groupId>
-                <artifactId>hadoop-common</artifactId>
-                <version>${hadoop.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>log4j</groupId>
-                        <artifactId>*</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>slf4j-log4j12</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.hadoop</groupId>
-                <artifactId>hadoop-yarn-common</artifactId>
-                <version>${hadoop.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.hadoop</groupId>
-                <artifactId>hadoop-yarn-client</artifactId>
-                <version>${hadoop.version}</version>
-            </dependency>
-
         </dependencies>
 
     </dependencyManagement>
@@ -85,10 +59,19 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19</version>
+                <version>3.0.0-M1</version>
                 <configuration>
                     <!--once就表示单线程挨个执行Junit test-->
-                    <forkMode>once</forkMode>
+<!--                    <forkMode>once</forkMode>-->
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <excludes>
+                        <exclude>com/dtstack/engine/master/temp/*.java</exclude>
+                        <exclude>**/Abstract*.java</exclude>
+                        <exclude>**/Base*.java</exclude>
+                        <exclude>com/dtstack/engine/rdbs/presto/TestPrestoDB.java</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
